これでOnsNavigatorでエラーにならなくなった

--- a/src/component/contentpage/contentpage.html
+++ b/src/component/contentpage/contentpage.html
@@ -7,7 +7,5 @@
       </div>
       <div class="center">Content Page</div>
     </ons-toolbar>
-    <p style="text-align: center; opacity: 0.6; padding-top: 20px;">
-      ここに何を書くんだい？
-    </p>
+    <ons-navigator [page]="textpage"></ons-navigator>
 </ons-page>
