--- a/src/component/sidepage/sidepage.html
+++ b/src/component/sidepage/sidepage.html
@@ -6,7 +6,7 @@
     <div class="content">
         <ons-list>
             <ons-list-header>参加してる</ons-list-header>
-            <ons-list-item tappable (click)="closeMenu()">そのページだよ</ons-list-item>
+            <ons-list-item tappable (click)="homepage()">そのページだよ</ons-list-item>
             <ons-list-item tappable>Tap me</ons-list-item>
             <ons-list-item tappable>Tap me</ons-list-item>
             <ons-list-item tappable>Tap me</ons-list-item>
